<resources>
    <string name="app_name">Educasa</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_misclases">Mis Clases</string>
    <string name="title_chat">Chat</string>
    <string name="title_solicitudes">Solicitudes</string>
    <string name="title_perfil">Perfil</string>

    <string name="bienvenida_iniciar_sesion">Iniciar Sesión</string>
    <string name="bienvenida_crear_cuenta">Crear Cuenta</string>
    <string name="bienvenida_text1">Encuentra todos los profesores de todas las materias.</string>
    <string name="bienvenida_text2">Gratis y sin salir de tu casa al precio que tu eligas.</string>

    <string name="hello_blank_fragment">Hello blank fragment 1</string>

</resources>
