<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:tooltipText="ggg"
        android:icon="@drawable/ic_inicio_black_24dp"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_misclases"
        android:icon="@drawable/ic_misclases_black_24dp"
        android:title="@string/title_misclases" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_solicitudes"
        android:icon="@drawable/ic_solicitudes_black_24dp"
        android:title="@string/title_solicitudes" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_perfil_black_24dp"
        android:title="@string/title_perfil" />
</menu>